[tool.poetry]
name = "langchain-practical-guide"
version = "0.1.0"
description = "Everything you need to know to get started with LangChain"
authors = ["bibekgupta3333 <bibekgupta3333@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
langchain-openai = "^0.3.12"
python-dotenv = "^1.1.0"
langchain = "^0.3.23"
langchain-community = "^0.3.21"
langchain-anthropic = "^0.3.10"
langchain-google-genai = "^2.1.2"
langchain-google-vertexai = "^2.0.19"
langchain-google-firestore = "^0.5.0"
firestore = "^0.0.8"
tiktoken = "^0.9.0"
sentence-transformers = "^4.0.2"
bs4 = "^0.0.2"
firecrawl-py = "^1.15.0"
langchainhub = "^0.1.21"
wikipedia = "^1.4.0"
tavily-python = "^0.5.4"
langchain-chroma = "0.2.2"
lark = "^1.2.2"
nltk = "^3.9.1"
transformers = "4.53.0"
pydantic = "^2.11.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
