[tool.poetry]
name = "langchain-practical-guide"
version = "0.1.0"
description = "Everything you need to know to get started with LangChain"
authors = ["bibekgupta3333 <bibekgupta3333@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11.0,<3.14.0"
langchain-openai = "^1.0.3"
python-dotenv = "^1.2.1"
tiktoken = "^0.12.0"
sentence-transformers = "^5.1.2"
firecrawl-py = "^4.8.0"
wikipedia = "^1.4.0"
tavily-python = "^0.7.13"
lark = "^1.3.1"
nltk = "^3.9.2"
transformers = "^4.57.1"
pydantic = "^2.12.4"
ollama = "^0.6.1"
langchain = "^1.0.7"
langchain-core = "^1.0.7"
langchain-community = "^0.4.1"
langchain-anthropic = "^1.0.4"
langchain-google-genai = "^3.0.3"
langchain-google-vertexai = "^3.0.3"
bs4 = "^0.0.2"
langchainhub = "^0.1.21"
langchain-chroma = "^1.0.0"
langgraph = "^1.0.3"
langsmith = "^0.4.43"
langchain-ollama = "^1.0.0"
langchain-huggingface = "^1.0.1"


[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
